--- a/front-end/src/Change_password.css
+++ b/front-end/src/Change_password.css
@@ -1,5 +1,4 @@
-/* Overall container to match HomePage */
-.manage-container {
+.manage-password {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,75 +15,34 @@
     margin-bottom: 20px;
     border-radius: 10px;
   }
-  
-  .name-login-form {
-    width: 175px;
-    font-size: 29px;
-    color: #051D01;
-    margin-bottom: 20px;
-    text-align: left;
-    align-items: flex-start;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .name-login-form label {
-    font-weight: 600;
-    color: #063204;
-  }
-  
-  .name-login-form input {
-    padding: 10px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    outline: none;
-  }
-  
-  .name-login-form input:focus {
-    border-color: #2B5528;
-  }
-  .email-login-form {
-    width: 175px;
-    font-size: 29px;
-    color: #051D01;
-    margin-bottom: 20px;
-    text-align: left;
-    align-items: flex-start;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  .email-login-form label {
-    font-weight: 600;
-    color: #063204;
-  }
-  
-  .email-login-form input {
-    padding: 10px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    outline: none;
-  }
-  
-  .email-login-form input:focus {
-    border-color: #2B5528;
-  }
-  
-  /* Login button matching HomePage buttons */
-  .change_password_button {
-    width: 175px;
-    padding: 12px;
-    background-color: #063204;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background 0.3s;
-  }
 
-    .update_info_button {
+.new-password {
+    width: 175px;
+    font-size: 29px;
+    color: #051D01;
+    margin-bottom: 20px;
+    text-align: left;
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+.new-password label {
+    font-weight: 600;
+    color: #063204;
+  }
+  
+.new-password input {
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    outline: none;
+  }
+  
+.new-password input:focus {
+    border-color: #2B5528;
+  }
+.change_password {
     width: 175px;
     padding: 12px;
     background-color: #063204;
@@ -95,4 +53,14 @@
     cursor: pointer;
     transition: background 0.3s;
   }
-  
+  .update_password_button {
+    width: 175px;
+    padding: 12px;
+    background-color: #063204;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s;
+  }
