--- a/front-end/src/EventModal.css
+++ b/front-end/src/EventModal.css
@@ -27,13 +27,18 @@
   .modal-header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
   
   .modal-header h2 {
+    align-items: left;
     margin: 0;
     color: #051D01;
     font-size: 22px;
+  }
+
+  .header-left {
+   text-align: left;
   }
   
   .close-button {
@@ -108,6 +113,12 @@
   
   .cancel-btn:hover {
     background-color: #a3a19c;
+  }
+
+  .user {
+  text-align: left;
+  font-size: 15px;
+  margin-top: 9px;
   }
   
   @keyframes fadeIn {
