Reminders are now getting deleted

--- a/front-end/src/MyCalender.css
+++ b/front-end/src/MyCalender.css
@@ -256,3 +256,16 @@ body {
   outline: 2px solid #9bb093;
   outline-offset: 2px;
 }
+
+.reminder-details {
+  margin-top: 4px;
+  padding-top: 4px;
+  border-top: 1px dashed #d5d2c9;
+  font-size: 12px;
+  color: #324a2c;
+}
+
+.reminder-details p {
+  margin: 2px 0;
+}
+
