--- a/front-end/src/Login.css
+++ b/front-end/src/Login.css
@@ -96,3 +96,22 @@
     color: #051D01;
   }
   
+  .password-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+  
+  .password-wrapper input {
+    width: 100%;
+    padding-right: 40px;
+  }
+  
+  .toggle-password {
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+    color: #333;
+    font-size: 18px;
+  }
+  
