--- a/front-end/src/FamilySchedule.css
+++ b/front-end/src/FamilySchedule.css
@@ -84,3 +84,17 @@
     background-color: #c2d2bc;
     cursor: pointer;
   }
+
+  #dropdown{
+    text-align: center;
+    margin-top: 0px;
+    padding-top: 0px;
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+
+  #filter{
+    padding-bottom: 0px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+  }
